@@ -61,3 +61,8 @@ CollaborationInfrastructure-2.4:
 - Bumped Vrui version requirement to Vrui-2.6-001.
 - Adapted collaboration client vislet to new vislet initialization
   procedure.
+
+CollaborationInfrastructure-2.5:
+- Fixed installation path for make configuration file if INSTALLPREFIX
+  is specified. Pointed out by Braden Pellett.
+- Bumped Vrui version requirement to Vrui-2.7-001.
